Fixed zones being too short when there aren't many devices.

--- a/src/uk/ac/nott/mrl/homework/client/device.css
+++ b/src/uk/ac/nott/mrl/homework/client/device.css
@@ -170,10 +170,11 @@ body
 }
 
 .devicePanel {
-	min-height: 100%;
+	height: 100%;
 	width: 100%;
 	-webkit-user-select: none;
 	-moz-user-select: none;
+	position: absolute;
 }
 
 .popupLink {
